<resources>
    <string name="app_name">Set The Mood</string>
    <string name="search">Search</string>
    <string name="key">Key</string>
    <string name="mood_key">Mood Key</string>
    <string name="home_title">What Is Your Mood?</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="excited">Excited</string>
    <string name="relaxed">Relaxed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Set The Mood</string>
</resources>
