<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:text="@string/home_title"/>

    <Button
        android:id="@+id/happy_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/happy"
        android:onClick="getHappy"/>

    <Button
        android:id="@+id/sad_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sad"
        android:onClick="getSad"/>

    <Button
        android:id="@+id/angry_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/angry"
        android:onClick="getAngry"/>

    <Button
        android:id="@+id/excited_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/excited"
        android:onClick="getExcited"/>

    <Button
        android:id="@+id/relaxed_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/relaxed"
        android:onClick="getRelaxed"/>
</LinearLayout>
